# NIR

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  LOGGING.md  README.md
.cache/clangd/index/: EditorView.cpp.443DC74C6C060BBA.idx  EditorView.h.CB67EE0CA41181F5.idx  MainWindow.cpp.C3DE06424BAD11BD.idx  MainWindow.h.F40E32D3B5BA1692.idx  PanelArea.cpp.2395EC57C211F2F1.idx  PanelArea.h.A72A4EEF02B4B9D8.idx  main.cpp.80D9914926B1BDA4.idx
resources/: app.qrc
src/: CMakeLists.txt
src/app/: main.cpp
src/commands/: Command.h  CommandManager.cpp  CommandManager.h  MaterialCommands.cpp  MaterialCommands.h  ShapeCommands.cpp  ShapeCommands.h
src/model/: DocumentModel.cpp  DocumentModel.h  MaterialModel.cpp  MaterialModel.h  MaterialPreset.cpp  MaterialPreset.h  ObjectTreeModel.cpp  ObjectTreeModel.h  ShapeModel.cpp  ShapeModel.h  ShapeSizeConverter.cpp  ShapeSizeConverter.h  SubstrateModel.cpp  SubstrateModel.h
src/model/core/: ModelObject.cpp  ModelObject.h  ModelTypes.h  Signal.h
src/scene/: ISceneObject.h
src/scene/items/: BaseShapeItem.h  CircleItem.cpp  CircleItem.h  EllipseItem.cpp  EllipseItem.h  RectangleItem.cpp  RectangleItem.h  StickItem.cpp  StickItem.h
src/serialization/: ProjectSerializer.cpp  ProjectSerializer.h
src/ui/: EditorView.cpp  EditorView.h  MainWindow.cpp  MainWindow.h  PanelArea.cpp  PanelArea.h
src/ui/activity/: ActivityBar.cpp  ActivityBar.h  ActivityButton.cpp  ActivityButton.h
src/ui/bindings/: ShapeModelBinder.cpp  ShapeModelBinder.h
src/ui/controller/: DocumentController.cpp  DocumentController.h
src/ui/editor/: EditorArea.cpp  EditorArea.h  SubstrateDialog.cpp  SubstrateDialog.h  SubstrateItem.cpp  SubstrateItem.h
src/ui/panels/: ObjectsBar.cpp  ObjectsBar.h  PropertiesBar.cpp  PropertiesBar.h
src/ui/sidebar/: SideBarWidget.cpp  SideBarWidget.h
src/ui/utils/: ColorUtils.h
src/utils/: Logger.cpp  Logger.h  Logging.h
